--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,6 +1,7 @@
 html {
     margin: 0;
     padding: 0;
+    user-select: none;
 }
 
 body {
@@ -42,7 +43,6 @@ p {
 }
 
 .sub-title {
-
     font-weight: 400;
     margin-bottom: 0.5em;
 }
@@ -56,7 +56,7 @@ p {
 /* Buttons */
 
 .btn-wrapper {
-    width: 60%;
+    width: 65%;
     display: flex;
     margin: 4em auto;
     flex-wrap: wrap;
@@ -92,4 +92,5 @@ p {
     font-size: 4rem;
     margin: 0.6em 0;
     padding: 0;
+    cursor: pointer;
 }
